	new file:   Code/Character/UTF8Conversion/C++ UTF-8 Conversion1/Doc/description/a7d1e078-8570-47da-a87b-ff462dfc958dCombined.css
	new file:   Code/Character/UTF8Conversion/C++ UTF-8 Conversion1/Doc/description/iframedescription.css
	new file:   Code/Character/UTF8Conversion/C++ UTF-8 Conversion1/Doc/description/offline.js
	new file:   Code/Character/UTF8Conversion/C++ UTF-8 Conversion1/Doc/extension.vsixmanifest
	new file:   Code/Character/UTF8Conversion/C++ UTF-8 Conversion1/Doc/license.rtf
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
trie.2015/05/15.17_39_27.27.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	new file:   grep20d/Doc/Trie Tree (bu.edu).cs

+---------+---------+---------+---------+---------+---------+---------+---------+ 
trie.2015/05/15.18_04_47.75.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	new file:   "grep20d/Doc/Trie  c\345\256\236\347\216\260.cs"

+---------+---------+---------+---------+---------+---------+---------+---------+ 
stack_dir.2015/05/18.17_10_22.77.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	modified:   grep20d/grep/grep/alloca.c

+---------+---------+---------+---------+---------+---------+---------+---------+ 
trie.2015/05/18.18_01_13.53.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	modified:   "grep20d/Doc/Trie  c\345\256\236\347\216\260.cs"
	modified:   grep20d/Doc/Trie Tree (bu.edu).cs
