@@ -59,9 +59,10 @@
        Zcl_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
        Zcl_E : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
      Zndex_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Zndex_E : //z 2015-05-13 13:48:50 L.232'36670 T2827250132.K ~165 +----+----+----+----+----+
+     Zndex_E : //z 2015-05-19 16:08:05 L.226'28315 T2808751161.K ~170 +----+----+----+----+----+
      TimeCnt : //z 2015-05-13 12:38:40 L.232'40880 T1534596209.K ~9   +----+----+----+----+----+
-     Reg.Cnt : //z 2015-05-13 13:48:24 L.232'36696 T2827250037.K ~12  +----+----+----+----+----+
+     Reg.Cnt : //z 2015-05-19 16:07:36 L.226'28344 T2808715324.K ~13  +----+----+----+----+----+
+     #13  R+ : //z 2015-05-19 16:07:36 L.226'28344 T2808715324.K ~13    V+.179  L+.227  
      #12  R+ : //z 2015-05-13 13:48:24 L.232'36696 T2827250037.K ~12    V+.174  L+.221  
      #11  R+ : //z 2015-05-13 12:38:32 L.232'40888 T1534596178.K ~11    V+.165  L+.210  
      #10  R+ : //z 2015-05-08 17:51:10 L.237'22130 T1800650386.K ~10    V+.142  L+.199  
@@ -75,7 +76,8 @@
      #2   R+ : //z 2015-04-27 11:31:41 L.248'44899 T1419899214.K ~2     V+.19   L+.104  
      #1   R+ : //z 2015-04-27 11:28:08 L.248'45112 T1418964727.K ~1     V+.3    L+.62   
      File.Op : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Version : //z 2015-05-13 13:48:50 L.232'36670 T2827250132.K ~177   R+.12   L+.221  --+----+
+     Version : //z 2015-05-19 16:08:05 L.226'28315 T2808751161.K ~183   R+.13   L+.228  --+----+
+     #9   R+ : //z 2015-05-19 16:07:36 L.226'28344 T2808715324.K ~179   R+.13   L+.228  V+.179  
      #9   R+ : //z 2015-05-13 13:48:24 L.232'36696 T2827250037.K ~174   R+.12   L+.222  V+.174  
      #9   V+ : //z 2015-05-13 12:39:24 L.232'40836 T1534632084.K ~171   R+.11   L+.212  
      #8   R+ : //z 2015-05-13 12:38:32 L.232'40888 T1534596178.K ~165   R+.11   L+.211  V+.165  
@@ -220,3 +222,8 @@ http://tex.loria.fr/prod-graph/zoonekynd/metapost/metapost.html
 #region 05-13 13:48 R#.12   @znote astyle -A1 -R -z1 -n *.cpp
 01. astyle 命令行。
 #endregion //z 2015-05-13 13:48:24 L.232'36696 BG57IV3@XCL T2827250037.K.F4146951713-+----+----+
+
+#region 05-19 16:07 R#.13   @zlog hosts
+01. 
+git clone https://github.com/racaljk/hosts.git hosts_racaljk
+#endregion //z 2015-05-19 16:07:36 L.226'28344 BG57IV3@XCL T2808715324.K.F4146951713-+----+----+
