@@ -847,3 +847,15 @@ Changes to be committed:
 	modified:   "grep20d/Doc/Trie  c\345\256\236\347\216\260.cs"
 	modified:   grep20d/Doc/Trie Tree (bu.edu).cs
 
++---------+---------+---------+---------+---------+---------+---------+---------+ 
+d_am.2015/05/20.09_57_19.33.K.MzM.T@WS 
+On branch master
+Your branch is up-to-date with 'origin/master'.
+
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+	modified:   Doc/K/T.2015.BugFree.cs
+	modified:   History.txt
+	modified:   ncftp-1.9.5/util.c
+
